examples/test/testpolicy18467.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18467
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key44: value45
      key6: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value24
          key7: value7
          key12: value48
      podSelector:
        matchLabels:
          key43: value42
          key13: value16
